fixed program viewing on iphone + formatting

--- a/client/src/components/account/ProgramView.css
+++ b/client/src/components/account/ProgramView.css
@@ -1,9 +1,5 @@
-/* .embeddedProgram {
-    padding: 2%;
-    user-select: none;
+iframe.programView {
     width: 100%;
+    height: 100%;
+    border: none;
 }
-
-div.embeddedProgram >  div.c5 {
-    padding: 2% !important;
-} */
